docs/v3.0.6/Rawtransactions/decoderawtransaction.md
## **`decoderawtransaction`**

**`decoderawtransaction "hexstring"`**

Return a JSON object representing the serialized, hex-encoded transaction.

***Arguments:***
```
1. "hexstring"      (string, required) The transaction hex string

```

***Result:***
```
{
  "txid" : "id",        (string) The transaction id
  "size" : n,             (numeric) The transaction size
  "version" : n,          (numeric) The version
  "locktime" : ttt,       (numeric) The lock time
  "vin" : [               (array of json objects)
     {
       "txid": "id",    (string) The transaction id
       "vout": n,         (numeric) The output number
       "scriptSig": {     (json object) The script
         "asm": "asm",  (string) asm
         "hex": "hex"   (string) hex
       },
       "sequence": n     (numeric) The script sequence number
     }
     ,...
  ],
  "vout" : [             (array of json objects)
     {
       "value" : x.xxx,            (numeric) The value in SYS
       "n" : n,                    (numeric) index
       "scriptPubKey" : {          (json object)
         "asm" : "asm",          (string) the asm
         "hex" : "hex",          (string) the hex
         "reqSigs" : n,            (numeric) The required sigs
         "type" : "pubkeyhash",  (string) The type, eg 'pubkeyhash'
         "addresses" : [           (json array of string)
           "XwnLY9Tf7Zsef8gMGL2fhWA9ZmMjt4KPwG"   (string) Syscoin address
           ,...
         ]
       }
     }
     ,...
  ],
}

```

***Examples:***
```
> syscoin-cli decoderawtransaction "hexstring"
> curl --user myusername --data-binary '{"jsonrpc": "1.0", "id":"curltest", "method": "decoderawtransaction", "params": ["hexstring"] }' -H 'content-type: text/plain;' http://127.0.0.1:8236/
```
